# reswarm_dmpc

./: CMakeLists.txt  README.md  deps_install.py  package.xml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-package.yml
config/: test_attitude.yaml  test_translation.yaml
config/bumble/: subleader_iface.yaml  subleader_iface_gnd.yaml  subleader_iface_gnd_301.yaml  subleader_iface_gnd_302.yaml  subleader_iface_gnd_304.yaml  subleader_iface_gnd_310.yaml  subleader_iface_gnd_31000.yaml  subleader_iface_gnd_31001.yaml  subleader_iface_gnd_31002.yaml  subleader_iface_gnd_31003.yaml  subleader_iface_gnd_31004.yaml  subleader_iface_gnd_31005.yaml  subleader_iface_gnd_31006.yaml  subleader_iface_gnd_31007.yaml  subleader_iface_gnd_31008.yaml  subleader_iface_gnd_31009.yaml  subleader_iface_gnd_31010.yaml  subleader_iface_gnd_31011.yaml  subleader_iface_gnd_31012.yaml  subleader_iface_gnd_31013.yaml  subleader_iface_gnd_31014.yaml  subleader_iface_gnd_31015.yaml  subleader_iface_gnd_31016.yaml  subleader_iface_gnd_31017.yaml  subleader_iface_gnd_31018.yaml  subleader_iface_gnd_31019.yaml  subleader_iface_gnd_31020.yaml  subleader_iface_gnd_31021.yaml  subleader_iface_gnd_31022.yaml  subleader_iface_gnd_31023.yaml  subleader_iface_gnd_31024.yaml  subleader_iface_gnd_31025.yaml  subleader_iface_gnd_31026.yaml  subleader_iface_gnd_31027.yaml  subleader_iface_gnd_31028.yaml  subleader_iface_gnd_31029.yaml  subleader_iface_gnd_31030.yaml  subleader_iface_gnd_31031.yaml  subleader_iface_gnd_31032.yaml  subleader_iface_gnd_31033.yaml  (+1659 more)
config/honey/: leader_iface_gnd.yaml  leader_iface_gnd_301.yaml  leader_iface_gnd_302.yaml  leader_iface_gnd_303.yaml  leader_iface_gnd_310.yaml  leader_iface_gnd_31000.yaml  leader_iface_gnd_31001.yaml  leader_iface_gnd_31002.yaml  leader_iface_gnd_31003.yaml  leader_iface_gnd_31004.yaml  leader_iface_gnd_31005.yaml  leader_iface_gnd_31006.yaml  leader_iface_gnd_31007.yaml  leader_iface_gnd_31008.yaml  leader_iface_gnd_31009.yaml  leader_iface_gnd_31010.yaml  leader_iface_gnd_31011.yaml  leader_iface_gnd_31012.yaml  leader_iface_gnd_31013.yaml  leader_iface_gnd_31014.yaml  leader_iface_gnd_31015.yaml  leader_iface_gnd_31016.yaml  leader_iface_gnd_31017.yaml  leader_iface_gnd_31018.yaml  leader_iface_gnd_31019.yaml  leader_iface_gnd_31020.yaml  leader_iface_gnd_31021.yaml  leader_iface_gnd_31022.yaml  leader_iface_gnd_31023.yaml  leader_iface_gnd_31024.yaml  leader_iface_gnd_31025.yaml  leader_iface_gnd_31026.yaml  leader_iface_gnd_31027.yaml  leader_iface_gnd_31028.yaml  leader_iface_gnd_31029.yaml  leader_iface_gnd_31030.yaml  leader_iface_gnd_31031.yaml  leader_iface_gnd_31032.yaml  leader_iface_gnd_31033.yaml  leader_iface_gnd_31034.yaml  (+1919 more)
include/reswarm_dmpc/: acado_mpc.h  leader_ctl.h
launch/: astrobee_sim.launch  launch_acado_controllers.launch  leader_interface.launch  sim.launch  subleader_interface.launch  template_interface.launch  unit_test_attitude.launch  unit_test_attitude_interface.launch  unit_test_translation.launch  unit_test_translation_interface.launch
launch/primary/: primary_t1.launch  primary_t2.launch  primary_t3.launch
launch/secondary/: secondary_t1.launch  secondary_t2.launch  secondary_t3.launch
msg/: AcadoStatusStamped.msg  DMPCTestStatusStamped.msg  InformationStamped.msg
nodes/: leader_ctl_node.cpp  param_gen_fc_leader.py  param_gen_fc_leader_gnd.py  param_gen_fc_primary.py  param_gen_fc_subleader.py  param_gen_fc_subleader_gnd.py  param_gen_ut_primary.py  param_gen_ut_primary_gnd.py  param_gen_ut_secondary.py  param_gen_ut_secondary_gnd.py  param_selector.py  repeater.py  ros_node.py  ros_node_leader.py  ros_node_queen.py  ros_node_subleader.py  ros_node_template.py  ros_node_unit_tests.py  run_acados_generation.py  run_formation.py  run_stabilization.py  run_tracking.py  run_tracking_multi_agent.py  subleader_ctl_node.cpp  task4.py  test_astrobee.py  test_mpc.py  test_py_modules.py  unit_test.py  unit_test_acados_compile.cpp  unit_test_acados_generation.py  unit_test_ctl.cpp  unit_test_stabilization.py  unit_test_tracking.py  unittest_ctl_node.cpp
src/reswarm_dmpc/: model.py  mpc.py  mpc_slack.py  simulation.py  simulation_trajectory.py  sinusoidal.py  util.py  util_iss.py
src/reswarm_dmpc/controllers/: acado_wrapper.cpp  mpc.py  mpc_acados.py  mpc_trajectory.py
src/reswarm_dmpc/controllers/formation/: dmpc.py  leader_ctl.cpp  mpc_follower.py  mpc_leader.py  mpc_local_leader.py
src/reswarm_dmpc/controllers/formation/acado/: GenerateFollower.m  GenerateLeader.m  GenerateLeader.m~  GenerateLeaderGround.m  GenerateSubLeader.m  GenerateSubLeaderGround.m  acado_wrapper.cpp
src/reswarm_dmpc/controllers/formation/acado/leader/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
src/reswarm_dmpc/controllers/formation/acado/leader_gnd/: acado_integrator.c  acado_solver.c
src/reswarm_dmpc/controllers/formation/acado/sub_leader/: acado_common.h  acado_integrator.c  acado_qpoases_interface.hpp  acado_solver.c
src/reswarm_dmpc/controllers/setpoint/: mpc.py
src/reswarm_dmpc/controllers/setpoint/acado/: GenerateSolver.m  GenerateSolverGround.m
src/reswarm_dmpc/controllers/trajectory/: mpc_acados.py  mpc_trajectory.py
src/reswarm_dmpc/models/: astrobee.py
src/reswarm_dmpc/reference_generation/: sinusoidal.py  trajectoryPreview.m
srv/: GetControl.srv  SetWeights.srv
test/: Exp_1.yaml  acados_node.cpp  acados_ocp_quadcopter_rk4.json  generate_c.py  mpc_euler_AC.py  quadcopter.py  srd370_2.yaml  utils.py
test/c_generated_code/: Makefile  acados_sim_solver_quadcopter_rk4.c  acados_sim_solver_quadcopter_rk4.h  acados_solver_quadcopter_rk4.c  acados_solver_quadcopter_rk4.h  acados_solver_sfunction_quadcopter_rk4.c  main_quadcopter_rk4.c  main_sim_quadcopter_rk4.c  make_sfun.m
test/c_generated_code/quadcopter_rk4_model/: quadcopter_rk4_expl_ode_fun.c  quadcopter_rk4_expl_vde_adj.c  quadcopter_rk4_expl_vde_forw.c  quadcopter_rk4_model.h
(+7 files in other folders)
